--- a/frontend/src/app/components/budget/budget-status/budget-status.html
+++ b/frontend/src/app/components/budget/budget-status/budget-status.html
@@ -1,4 +1,4 @@
-<div class="relative z-50">
+<div #root class="relative z-50" [class.animate-pop]="!closing" [class.animate-fade-out]="closing">
     <!-- tooltip container -->
     <div class="bg-white border border-gray-300 drop-shadow-xl rounded-xl shadow-lg p-4 w-80 text-slate-800">
         <div class="text-sm text-gray-700 mb-2 border-b border-gray-500">
