--- a/frontend/src/app/pages/budget-page/budget-page.html
+++ b/frontend/src/app/pages/budget-page/budget-page.html
@@ -5,6 +5,7 @@
         <div class="basis-full md:basis-9/12">
             <app-ui-card>
                 <app-budget-menu></app-budget-menu>
+                <app-budget-categories></app-budget-categories>
             </app-ui-card>
         </div>
         <div class="hidden md:block md:basis-3/12">
