--- a/frontend/src/app/components/ui/checkbox/checkbox.css
+++ b/frontend/src/app/components/ui/checkbox/checkbox.css
@@ -1,4 +1,4 @@
-
 /* Minimal host CSS: Tailwind utility classes are used in template */
-:host { display: inline-block; }
-
+:host {
+  display: inline-block;
+}
