--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,7 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-@import "tailwindcss";
+@import 'tailwindcss';
 
-body
-{
-    background-color: #f7f7f7;
+body {
+  background-color: #f7f7f7;
 }
