refactor: update formatting and structure in HTML templates and configuration files

--- a/frontend/src/app/components/budget/budget-categories/budget-categories.html
+++ b/frontend/src/app/components/budget/budget-categories/budget-categories.html
@@ -16,10 +16,5 @@
   </div>
 </div>
 <div class="">
-  <app-budget-category-group
-    [label]="'Catégorie 1'"
-    [assigned]="100"
-    [paid]="-50"
-    [available]="50"
-  ></app-budget-category-group>
+  <app-budget-category-group [label]="'Catégorie 1'" [assigned]="100" [paid]="-50" [available]="50"></app-budget-category-group>
 </div>
