--- a/frontend/src/app/components/budget/budget-category-item/budget-category-item.html
+++ b/frontend/src/app/components/budget/budget-category-item/budget-category-item.html
@@ -1,1 +1,21 @@
-<p>budget-category-item works!</p>
+<div>
+  <div class="flex flex-row bg-white px-2 h-8 text-sm text-gray-500 hover:bg-yellow-50">
+    <div class="basis-0 flex items-center">
+      <div class="w-6"></div>
+    </div>
+    <div class="h-8 basis-6/12 md:basis-3/12 flex items-center px-1 group">
+      <div class="flex items-center gap-2">
+        <div class="text-gray-800 hover:underline cursor-pointer">{{ label }}</div>
+      </div>
+    </div>
+    <div class="h-8 basis-3/12 md:basis-3/12 flex items-center justify-end px-1 text-right" [class]="getAvailableClass(assigned)">
+      <app-input-amount [value]="assigned" (valueChange)="onAssignedChange($event)"></app-input-amount>
+    </div>
+    <div class="h-8 hidden basis-3/12 md:basis-3/12 md:flex items-center justify-end px-1 text-right hover:underline cursor-pointer" [class]="getAvailableClass(paid)">
+      {{ formatCurrencyWithSign(paid) }}
+    </div>
+    <div class="h-8 basis-3/12 md:basis-3/12 flex items-center justify-end px-1 text-right">
+      <app-badge-amount [amount]="10" [needed]="20"></app-badge-amount>
+    </div>
+  </div>
+</div>
