feat: add accounts page and budget category components with associated templates and styles

--- a/frontend/src/app/components/budget/budget-month-summary/budget-month-summary.html
+++ b/frontend/src/app/components/budget/budget-month-summary/budget-month-summary.html
@@ -1,6 +1,6 @@
 <div>
     <div class="flex flex-col">
-        <div class="text-base font-semibold text-gray-600">Résumé du mois</div>
+        <div class="text-base font-semibold text-gray-600">Mois d'octobre 2025</div>
 
         <div class="flex flex-row justify-between text-sm text-gray-600">
             <div>Disponible du mois précédent</div>
