--- a/frontend/src/app/components/accounts/accounts-table/accounts-table.html
+++ b/frontend/src/app/components/accounts/accounts-table/accounts-table.html
@@ -1,8 +1,5 @@
 <div>
-    <div class="flex flex-row px-2 h-8 text-xs font-semibold uppercase text-gray-500 bg-gray-50 mt-1">
-        <div class="basis-0 flex items-center pr-2">
-            <fa-icon [icon]="icChevronRight" class="text-gray-400 text-xs cursor-pointer"></fa-icon>
-        </div>
+    <div class="flex flex-row px-2 h-8 text-xs font-semibold uppercase text-gray-500 bg-gray-50">
         <div class="basis-8/12 md:basis-4/12 flex items-center px-1">Compte bancaire</div>
         <div class="hidden basis-4/12 md:basis-4/12 md:flex items-center justify-end px-1 text-right">
             Solde rapproché
@@ -10,24 +7,21 @@
         <div class="basis-4/12 md:basis-4/12 flex items-center justify-end px-1 text-right">
             Solde
         </div>
-        <div class="basis-0 md:basis-0 flex items-center justify-end px-1 text-right">
+        <div class="w-8 flex items-center justify-end px-1 text-right">
             &nbsp;
         </div>
     </div>
 
-    <div class="flex flex-row px-2 h-8 text-xs font-semibold uppercase text-gray-500 mt-1">
-        <div class="basis-0 flex items-center pr-2">
-            <fa-icon [icon]="icChevronRight" class="text-gray-400 text-xs cursor-pointer"></fa-icon>
-        </div>
-        <div class="basis-8/12 md:basis-4/12 flex items-center px-1">Compte bancaire</div>
+    <div class="flex flex-row px-2 h-8 text-sm font-semibold uppercase text-gray-500 mt-1">
+        <div class="basis-8/12 md:basis-4/12 flex items-center px-1">Compte CIC</div>
         <div class="hidden basis-4/12 md:basis-4/12 md:flex items-center justify-end px-1 text-right">
-            Solde rapproché
+            1 203,00 €
         </div>
         <div class="basis-4/12 md:basis-4/12 flex items-center justify-end px-1 text-right">
-            Solde
+            1 203,00 €
         </div>
-        <div class="basis-0 md:basis-0 flex items-center justify-end px-1 text-right">
-            &nbsp;
+        <div class="w-8 flex items-center justify-end px-1 text-right">
+           <fa-icon [icon]="icEditAccount" class="text-gray-400 text-xs cursor-pointer hover:text-[#58a9ff]"></fa-icon>
         </div>
     </div>
 </div>
