--- a/frontend/src/app/pages/accounts-page/accounts-page.html
+++ b/frontend/src/app/pages/accounts-page/accounts-page.html
@@ -1,1 +1,12 @@
 <app-header></app-header>
+
+<div class="px-1 md:px-0">
+    <div class="flex flex-row mx-auto max-w-7xl gap-1 md:gap-3">
+        <div class="basis-full md:basis-12/12">
+            <app-ui-card>
+                <app-accounts-menu></app-accounts-menu>
+                <app-accounts-table></app-accounts-table>
+            </app-ui-card>
+        </div>
+    </div>
+</div>
