feat: add account page and accounts list components with routing and templates

--- a/frontend/src/app/components/accounts/accounts-table/accounts-table.html
+++ b/frontend/src/app/components/accounts/accounts-table/accounts-table.html
@@ -13,7 +13,7 @@
     </div>
 
     <div class="flex flex-row px-2 h-8 text-sm font-semibold uppercase text-gray-500 mt-1">
-        <div class="basis-8/12 md:basis-4/12 flex items-center px-1">Compte CIC</div>
+        <div class="basis-8/12 md:basis-4/12 flex items-center px-1 hover:underline cursor-pointer"><a href="/accounts/1">Compte CIC</a></div>
         <div class="hidden basis-4/12 md:basis-4/12 md:flex items-center justify-end px-1 text-right">
             1 203,00 €
         </div>
